fixed breadcrumbs showing below searcbar on mobile

--- a/client/sass/_Map.sass
+++ b/client/sass/_Map.sass
@@ -47,3 +47,4 @@ footer
 
   header
     background: transparent
+    min-height: 88px
